# react-native-pitchy

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-pitchy.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/pitchy/: PitchyModule.kt  PitchyPackage.kt
cpp/: react-native-pitchy.cpp  react-native-pitchy.h
example/: app.json  package.json
example/android/: settings.gradle
example/ios/: File.swift  Podfile
example/src/: App.tsx
example/src/hooks/: use-microphone-permission.ts
ios/: Pitchy.h  Pitchy.mm
src/: index.tsx
